[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/LevelBase.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Tools/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Helpers/GravityLine/GravityLine.tscn" type="PackedScene" id=5]

[node name="LevelBase" type="Node2D"]
script = ExtResource( 1 )

[node name="LevelStateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="EntityContainer" type="Node2D" parent="."]

[node name="GravityLine" parent="." instance=ExtResource( 5 )]

[node name="Camera2D" type="Camera2D" parent="."]
